deployblue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment-test
spec:
  selector:
    matchLabels:
      app: blue
  replicas: 2 
  template: 
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:mainline-alpine
        ports:
        - containerPort: 80
