deploygreen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment-test
spec:
  selector:
    matchLabels:
      app: green
  replicas: 1
  template: 
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:mainline-alpine
        label: 
        ports:
        - containerPort: 80
