ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /bear
        pathType: Prefix
        backend:
          service: 
            name: bear-svc
            port: 
              number: 80
  - http:
      paths:
      - path: /moose
        pathType: Prefix
        backend:
          service: 
            name: moose`-svc
            port: 
              number: 80
